--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,25 @@
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* ---break---  */
 
-:root {
+/* @theme inline {
+  --color-black-100: #000319;
+  --animate-spotlight: spotlight 2s ease 0.75s 1 forwards;
+} */
+
+/* @keyframes spotlight {
+  0% {
+    opacity: 0;
+    transform: translate(-72%, -62%) scale(0.5);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(-50%, -40%) scale(1);
+  }
+} */
+
+/* :root {
   --background: #ffffff;
   --foreground: #171717;
 }
@@ -23,4 +42,4 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
+} */
